0.2		UNRELEASED

 BUG FIXES

  * Use better merge bases (#144033)

  * Give proper warning when there is no common base. (#144401)

  * Support the -r argument to rebase.

  * Add --dry-run option to rebase command. 

  * Fix compatibility with Bazaar 0.92.
   (#144031)

  * Store parents correctly.
 
 FEATURES

  * Skip double merges by default, unless specified otherwise. (#126743)

  * Check for incompatible Bazaar functions.

  * Add replay command.

0.1 	2007-07-15

 * Initial release.